# meu_bot

./: .replit  analysis.py  keep_alive.py  main.py  pyproject.toml  requirements.txt  requirements.txt1  teste_api.py  teste_api.py.
